# entropy

./: .gitignore  .goreleaser.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  chaos-scenario.example.yaml  chaos.example.yaml  demo.tape  go.mod  go.sum  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
cli-reference/: index.html
cmd/entropy/: main.go
devchaoskit/: _worker.py
devchaoskit/cli/: chaos_cmds.py  commands.py  docker_cmds.py  main.py
devchaoskit/config/: __init__.py  loader.py  schema.py
devchaoskit/engine/: actions.py  chaos_engine.py  docker_client.py  exceptions.py
devchaoskit/utils/: logger.py  state.py
docs/: cli-reference.md  index.md  random-chaos.md  release-checklist.md  scenarios.md
examples/demo-distributed/: README.md  docker-compose.yml
pkg/cli/: chaos.go  chaos_test.go  docker.go  doctor.go  init.go  init_test.go  observability.go  root.go  root_test.go  scenario.go  scenario_test.go  sys_unix.go  sys_windows.go  topology.go  worker.go
pkg/config/: loader.go  loader_test.go  schema.go  schema_test.go
pkg/engine/: actions.go  actions_test.go  chaos_engine.go  chaos_engine_test.go  discovery.go  discovery_k8s.go  discovery_test.go  docker_client.go  doctor.go  doctor_k8s.go  doctor_test.go  factory.go  kubernetes_client.go  mock_runtime_test.go  network_chaos.go  network_chaos_test.go  probes.go  probes_test.go  prom_client.go  runtime.go  scenario_runner.go  scenario_runner_test.go  topology.go  topology_test.go
pkg/reporter/: reporter.go  reporter_test.go
pkg/utils/: logger.go  logger_test.go  state.go  state_test.go
pkg/worker/: daemon.go  daemon_test.go
random-chaos/: index.html
release-checklist/: index.html
scenarios/: index.html
scripts/: e2e-smoke.sh
search/: search_index.json
src/: __init__.py  _worker.py
src/cli/: __init__.py  chaos_cmds.py  commands.py  docker_cmds.py  main.py  observability_cmds.py  scenario_cmds.py
src/config/: loader.py  schema.py
src/engine/: __init__.py  actions.py  chaos_engine.py  docker_client.py  exceptions.py  network_chaos.py
src/utils/: __init__.py  log_parser.py  logger.py  state.py
tests/: README.md
tests/cli/: chaos_test.go  init_test.go  root_test.go  scenario_test.go
tests/common/: docker_helper.go  (+2 more)
(+12 files in other folders)
