[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entropy-tool"
version = "0.1.0"
description = "A local chaos engineering toolkit for Docker-based microservices"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Entropy" }]
keywords = ["chaos-engineering", "docker", "microservices", "developer-tools", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "docker>=7.1.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
]

[project.scripts]
entropy = "src.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]
